--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,518 @@
-.App {
+.App{
+  filter: brightness(70%);
+ background-image: url('cover.jpg');
+background-size: cover;
+ background-repeat: no-repeat;
+ background-attachment: fixed;
+
+}
+
+
+/* ************************************************************* */
+/*Site Name*/
+/* ************************************************************* */
+
+.sitename{
+  text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #231557 0%,
+    #44107a 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: siteName 2s linear infinite;
+  display: inline-block;
+  font-size: 40px; 
+}
+@keyframes siteName {
+  to {
+    background-position: 200% center;
+  }
+}
+
+/* ************************************************************* */
+/* Container Fluid*/
+/* ************************************************************* */
+
+.containerFluid{
+  
+  position: fixed;
+  background-color: rgb(0, 0, 0);
+  width: 100%;
+  opacity: 0.8;
+  
+}
+
+.containerFluid:hover{
+  opacity: 1;
+}
+
+/* ************************************************************* */
+/* Links */
+/* ************************************************************* */
+
+a {
+  color: rgb(119, 106, 106);
+  text-decoration: none;
+  transition: 0.3s;
+}
+
+a:hover {
+  color: rgba(rgb(0, 0, 0), 0.75);
+  text-decoration: none;
+}
+
+/* ************************************************************* */
+ /*Nav Menu*/
+ /* ************************************************************* */
+
+ @media (min-width: 1200px) {
+  .navmenu {
+    padding: 0;
+    
+  }
+
+  .navmenu ul {
+    margin-top: -90px;
+    margin-left: 30%;
+    display: flex;
+    list-style: none;
+    align-items: center;
+  }
+
+  .navmenu li {
+    position: relative;
+  }
+
+  .navmenu a,
+  .navmenu a:focus {
+    padding: 18px 15px;
+    font-size: 20px;
+    font-weight: 400;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    white-space: nowrap;
+    transition: 0.3s;
+  }
+
+  .navmenu li:last-child a {
+    padding-right: 0;
+  }
+
+  .navmenu li:hover>a,
+  .navmenu .active,
+  .navmenu .active:focus {
+    color: rgb(255, 255, 255);
+  }
+
+
+}
+
+/* ************************************************************* */
+/* Navmenu - Mobile */
+/* ************************************************************* */
+
+@media (max-width: 1199px) {
+  .mobile-nav-toggle {
+    color: var(--nav-color);
+    font-size: 28px;
+    line-height: 0;
+    margin-right: 10px;
+  
+    cursor: pointer;
+    transition: color 0.3s;
+  }
+
+  .navmenu {
+    padding: 0;
+    z-index: 9997;
+    height: 55px;
+  }
+
+  .navmenu ul {
+ 
+    position: absolute;
+    inset: 60px 20px 20px 20px;
+    padding: 0px;
+    margin: 0;
+    border-radius: 6px;
+    background-color: var(--nav-dropdown-background-color);
+    overflow-y: auto;
+    transition: 0.3s;
+    z-index: 9998;
+    box-shadow: 0px 0px 30px rgba(var(--default-color-rgb), 0.1);
+  }
+
+  .navmenu a,
+  .navmenu a:focus {
+    color: rgb(189, 187, 187);
+    padding: 0px;
+    font-family: var(--nav-font);
+    font-size: 14px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    white-space: nowrap;
+    transition: 0.3s;
+  }
+
+
+  .navmenu a:hover,
+  .navmenu .active,
+  .navmenu .active:focus {
+    color: white;
+  }
+
+
+  .mobile-nav-active {
+    overflow: hidden;
+  }
+
+  .mobile-nav-active .mobile-nav-toggle {
+    color: #fff;
+    position: absolute;
+    font-size: 32px;
+    top: 15px;
+    right: 15px;
+    margin-right: 0;
+    z-index: 9999;
+  }
+
+  .mobile-nav-active .navmenu {
+    position: fixed;
+    overflow: hidden;
+    inset: 0;
+    background: rgba(33, 37, 41, 0.8);
+    transition: 0.3s;
+  }
+
+  .mobile-nav-active .navmenu>ul {
+    display: block;
+  }
+}
+
+/* ************************************************************* */
+/*welc-blg*/
+/* ************************************************************* */
+
+.wel-blg{
+margin-left: 35%;
+}
+
+.wel-blg-init
+  
+  {
+   
+    text-transform: uppercase;
+   background-image: linear-gradient(
+     -225deg,
+     #231557 0%,
+     #44107a 29%,
+     #ff1361 67%,
+     #fff800 100%
+   );
+   background-size: auto auto;
+   background-clip: border-box;
+   background-size: 200% auto;
+   color: #fff;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+   background-clip: text;
+   text-fill-color: transparent;
+   animation: textclip 2s linear infinite;
+   display: inline-block;
+   
+       font-size: 40px;
+ }
+ 
+
+
+  @media (max-width: 1199px) {
+    .wel-blg-init
+  
+  {
+   
+    text-transform: uppercase;
+   background-image: linear-gradient(
+     -225deg,
+     #231557 0%,
+     #44107a 29%,
+     #ff1361 67%,
+     #fff800 100%
+   );
+   background-size: auto auto;
+   background-clip: border-box;
+   background-size: 200% auto;
+   color: #fff;
+   background-clip: text;
+   text-fill-color: transparent;
+   -webkit-background-clip: text;
+   -webkit-text-fill-color: transparent;
+   animation: textclip 2s linear infinite;
+   display: inline-block;
+   
+       font-size: 100%;
+ }
+ 
+ @keyframes textclip {
+   to {
+     background-position: 200% center;
+   }
+  }
+
+  }
+
+  /* ************************************************************* */
+  /* form Templet */
+  /* ************************************************************* */
+
+  form{
+    background-color: rgb(112, 112, 112);
+    opacity: 0.9;
+   width: 400px;
+   margin-left: 35%;
+   border-radius: 3%;
+  }
+
+
+  form input{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 5px;
+    font-size: 20px;
+    margin-left: 20%;
+    width: 50%;
+    height: 30px;
+    border-style: hidden;
+    border-radius:10px ;
+    border: 2px solid white;
+  }
+
+  /* ************************************************************* */
+  /* Button */
+  /* ************************************************************* */
+
+  button {
+    /* Text */
+    background-color: rgb(119, 98, 98);
+    color: var(--text-base);
+    font-size: 15px;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+    margin-left: 35%;
+  
+    /* Button sizing */
+    padding: 0.85em;
+    max-width: 100%;
+    width: 6em;
+  
+    /* Button styling */
+    background-clip: padding-box;
+    border: 3px solid white;
+    border-radius: 2em;
+    cursor: pointer;
+  }
+  button:hover{
+    background-color: black;
+    color: white;
+  }
+
+  /* ************************************************************* */
+  /* Log form */
+  /* ************************************************************* */
+
+  .logform{
+    margin-left: 30%;
+  }
+
+ /* ************************************************************* */
+                       /* ABOUT */
+  /* ************************************************************* */
+
+  .aboutContainer{
+    background-color: #e9e9e9;
+    color: #000000;
+    text-align: center;
+  }
+
+ /* ************************************************************* */
+                       /* SERVICE */
+  /* ************************************************************* */
+  
+
+  
+  
+  .servc{
+    
+    width: 15rem;
+    border-radius: 1rem;
+    box-shadow: 0px 10px 8px #999;
+    display: flex;
+    flex-direction: column;
+    margin: 0.5rem; 
+    background-color: white; 
+    height: fit-content;
+}
+
+.containerImg{
+  width: 100%;
+  border-radius: 1rem 1rem 0 0;
+}
+
+.Title,
+.description{
+  margin: 0.5rem 5%;
+}
+.crdBtn{
+  text-align: center;
+  width: 80%;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  background-color: blue;
+  color: white;
+  text-decoration: none;
+  margin: 0.5rem ;
+  position: relative;
+}
+.servc:hover{
+width: 16rem;
+}
+.NssF{
+  float: right;
+  margin-top: -310px;
+  margin-right: 5%;
+}
+.NhiF{
+   float: right;
+  margin-top: -310px;
+  margin-right: 22%;
+}
+@media (max-width: 1199px){
+
+
+  .NssF{
+    float: left;
+   margin-left: 30%;
+  margin-top: 0px;
+  margin-right: 0px;
+
+  }
+  .NhiF{
+    float: left;
+  margin-left: 30%;
+  margin-top: 0px;
+  margin-right: 0px;
+  }
+}
+
+/* ************************************************************* */
+                       /* Contacts */
+  /* ************************************************************* */
+
+.contact{
+  background-color: #e4e4e4;
+}
+
+  .container1, .container2, .container3, .container4{
+    
+    width: 15rem;
+    border-radius: 1rem;
+    box-shadow: 0px 10px 8px #999;
+    display: flex;
+    flex-direction: column;
+    margin: 0.6rem; 
+    margin-left: 5%;/***/
+    background-color: white; 
+    height: fit-content;
+    text-align: center;
+}
+.container3, .container4{
+  flex-direction: column;
+  margin-left: 25%;/***/
+  margin-top: -330px;/***/
+  margin-bottom: 24%;/***/
+  text-align: center;
+}
+.contactTitle{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+
+/*Form*/
+.qaform{
+  position: relative;
+  margin-left: 40%;
+  margin-top: -620px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+/* Icons */
+.whatsapp{
+  color: #51b323;
+}
+.tele{
+  color: rgb(25, 0, 255);
+}
+.mail,.geoalt,.clock{
+  color: #ff0202;
+}
+
+/*Contact media size*/
+@media (max-width: 1199px){
+  .contact{
+    background-color: #ffffff;
+    height: auto;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+  .container1, .container2, .container3, .container4{
+    
+    width: 15rem;
+    border-radius: 1rem;
+    box-shadow: 0px 10px 8px #999;
+    display: flex;
+    flex-direction: column;
+    margin: 0.5rem; 
+    margin-left: 25%;/***/
+    background-color: white; 
+    height: fit-content;
+}
+.container3{
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left:25%;/***/
+  margin-top: 0;/***/
+  margin-bottom: 0;/***/
+  text-align: center;
+}
+.container4{
+ visibility: hidden;
+}
+.qaform{
+ visibility: hidden;
+}
+}
+/*******************************************/
+            /*Footer*/
+/******************************************/
+.footer{
+  background-color: #ffffff;
+  text-align: center;
+}
+.copyright{
+  font-size: 18px;
+}
+.designer{
+  font-size: 12px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
